--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -9,6 +9,7 @@ on:
     branches: [ "main" , "development", "test"]
   pull_request:
     branches: [ "main" ]
+    yuyu
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
