--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -8,8 +8,7 @@ on:
   push:
     branches: [ "main" , "development", "test"]
   pull_request:
-    branches: [ "main" ]
-    yuyu
+    branches: [ "main" ] yuyu
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
