--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -25,7 +25,7 @@ jobs:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v4
       - name: package install
-        run: npm install htmlhint --save dav
+        run: npm install htmlhint --save-dev
 
       # Runs a single command using the runners shell
       - name: Run a one-line script
