--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -38,4 +38,4 @@ jobs:
           echo test, and deploy your project.
           
       - name: index.html test
-        run: npx htmlhint index.html
+        run: npx htmlhint "**/*.html"
